--- a/Automobile.ipynb
+++ b/Automobile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "id": "according-february",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "4             five         115               18  17450.0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "id": "congressional-martial",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "60             four         114               23  13415.0  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,8 +290,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "id": "steady-revelation",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35    mercedes-benz\n",
+       "Name: company, dtype: object"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#most expensive car name\n",
+    "auto[\"company\"][auto.price == auto[\"price\"].max()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "cubic-activation",
    "metadata": {},
    "outputs": [
     {
@@ -315,39 +338,113 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>company</th>\n",
+       "      <th>body-style</th>\n",
+       "      <th>wheel-base</th>\n",
+       "      <th>length</th>\n",
+       "      <th>engine-type</th>\n",
+       "      <th>num-of-cylinders</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>average-mileage</th>\n",
        "      <th>price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>mercedes-benz</td>\n",
-       "      <td>45400.0</td>\n",
+       "      <th>59</th>\n",
+       "      <td>87</td>\n",
+       "      <td>volvo</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>104.3</td>\n",
+       "      <td>188.8</td>\n",
+       "      <td>ohc</td>\n",
+       "      <td>four</td>\n",
+       "      <td>114</td>\n",
+       "      <td>23</td>\n",
+       "      <td>12940.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>88</td>\n",
+       "      <td>volvo</td>\n",
+       "      <td>wagon</td>\n",
+       "      <td>104.3</td>\n",
+       "      <td>188.8</td>\n",
+       "      <td>ohc</td>\n",
+       "      <td>four</td>\n",
+       "      <td>114</td>\n",
+       "      <td>23</td>\n",
+       "      <td>13415.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          company    price\n",
-       "35  mercedes-benz  45400.0"
+       "    index company body-style  wheel-base  length engine-type num-of-cylinders  \\\n",
+       "59     87   volvo      sedan       104.3   188.8         ohc             four   \n",
+       "60     88   volvo      wagon       104.3   188.8         ohc             four   \n",
+       "\n",
+       "    horsepower  average-mileage    price  \n",
+       "59         114               23  12940.0  \n",
+       "60         114               23  13415.0  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#most expensive car name\n",
-    "auto[[\"company\",\"price\"]][auto.price == auto[\"price\"].max()]"
+    "#print all volvo cars\n",
+    "cars = auto.groupby(\"company\")\n",
+    "volvos = cars.get_group(\"volvo\")\n",
+    "volvos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "industrial-geometry",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "toyota           7\n",
+       "bmw              6\n",
+       "mazda            5\n",
+       "nissan           5\n",
+       "mercedes-benz    4\n",
+       "mitsubishi       4\n",
+       "audi             4\n",
+       "volkswagen       4\n",
+       "jaguar           3\n",
+       "alfa-romero      3\n",
+       "chevrolet        3\n",
+       "honda            3\n",
+       "porsche          3\n",
+       "isuzu            3\n",
+       "dodge            2\n",
+       "volvo            2\n",
+       "Name: company, dtype: int64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#count cars per each company\n",
+    "auto[\"company\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cubic-activation",
+   "id": "breathing-tracker",
    "metadata": {},
    "outputs": [],
    "source": []
